--- a/css/style.css
+++ b/css/style.css
@@ -219,7 +219,7 @@
   overflow: hidden;
 }
 .home .img-border {
-  background: #82158e;
+  background: #094f58;
   width: 245px;
   height: 245px;
   border-radius: 50%;
@@ -227,7 +227,7 @@
   justify-content: center;
   align-items: center;
   animation: ani;
-  box-shadow: 0px 0px 1px 2px black;
+  box-shadow: 0px 0px 1px 2px #b5b5b5;
 }
 .desktop-home-image {
   animation: slideInFromRight 1s ease-in;
@@ -241,11 +241,10 @@
 
 /*  global classes */
 
-.btn {
+.about .btn {
   text-transform: uppercase;
   background: transparent;
   padding: 0.375rem 0.75rem;
-  letter-spacing: 0.25rem;
   display: inline-block;
   transition: all 03s linear;
   font-size: 0.875rem;
@@ -254,7 +253,7 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   border-radius: 0.5rem;
 }
-.btn:hover {
+.about .btn:hover {
   color: white;
   background: black;
 }
@@ -317,6 +316,7 @@ Questions
   cursor: pointer;
   color: rgb(48, 241, 0);
   transition: all 0.3s linear;
+  outline: none;
 }
 .question-btn:hover {
   transform: rotate(90deg);
@@ -329,7 +329,7 @@ Questions
 }
 .question-text p {
   color: #040af3;
-  padding: 1rem;
+  padding: 3rem;
   text-align: justify;
   font-family: "Font Awesome 5 Brands";
 }
@@ -355,7 +355,44 @@ Questions
 .show-text .plus-icon {
   display: none;
 }
-
+.title h3 {
+  text-align: center;
+  font-size: 2rem;
+  text-transform: uppercase;
+  color: pink;
+}
+@media (max-width: 950px) {
+  .about .section-center {
+    box-shadow: none;
+    background: none;
+  }
+  .question-title p {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 622px) {
+  .question-title p {
+    font-size: 0.7rem;
+  }
+  .question-text .first {
+    margin: 0 10px 0 10px;
+    padding: 1rem;
+  }
+  .question-text .second {
+    padding: 1rem;
+  }
+  .question-text .third {
+    padding: 1rem;
+    margin: 0 10px 0 10px;
+    font-size: 9px;
+    text-align: center;
+  }
+  .question-text .four {
+    font-size: 0.6rem;
+    padding: 1rem;
+    margin: 0 10px 0 10px;
+  }
+}
 /* #### PROJECTS PAGE #### */
 .projects {
   padding: 2rem 0 2.5rem 0;
@@ -888,6 +925,7 @@ Questions
 }
 .skills .row {
   grid-template-columns: 1fr;
+  grid-gap: 1rem;
 }
 .skills-bar {
   margin: 0px 10px 0px 10px;
@@ -931,6 +969,9 @@ Questions
 }
 .contact .row {
   margin: 0.5rem 0rem;
+}
+.contact .title > a h2 {
+  font-size: 2rem;
 }
 .contact .row > div {
   margin: 0.5rem 0;
@@ -1051,6 +1092,9 @@ Questions
     width: 100%;
   }
   /* skills section  */
+  .skills .row {
+    grid-gap: 2rem;
+  }
   .skills-bar .skill .Name {
     width: 90px;
     font-size: 12px;
@@ -1129,6 +1173,7 @@ Questions
     border-radius: 50%;
     display: block;
     width: 100%;
+    background: #7e92a2;
   }
   .desktop-home-image {
     display: none;
@@ -1324,10 +1369,10 @@ Questions
     font-size: 50px;
   }
   .home .img-container {
-    width: 100%;
+    width: 80%;
     height: 90%;
     border-radius: unset;
-    margin-right: 33px;
+    margin-right: 79px;
   }
   .home .img-border {
     height: 100vh;
@@ -1430,6 +1475,7 @@ Questions
     letter-spacing: 2px;
     color: #fff;
     font-weight: bolder;
+    outline: none;
   }
   /* FOOTER SECTION  */
   .footer .row {
