--- a/css/utility.css
+++ b/css/utility.css
@@ -32,6 +32,7 @@ a {
   width: 100%;
   display: block;
   border-radius: 10px;
+  border: 5px solid #d0d0d0;
 }
 .mobile-home-image {
   display: none;
